<resources>
    <string name="app_name">Practice_demo</string>
    <string name="roll">Roll</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Email is invalid, not of format test@example.com</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed, please check your username and password and try again"</string>
    <string name="signup_failed">"Signup failed, user already exists"</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="view_profile">View profile</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="log_in_to_existing_account">Log in to existing account</string>
    <string name="add_new_post">Add new post</string>
    <string name="new_post">New post</string>
    <string name="new_post_make_video">Make Video</string>
    <string name="new_post_upload_video">Upload Video</string>
    <string name="new_post_submit">Post</string>
    <string name="toast_video_stopped">Video has been stopped. Tap to continue</string>
    <string name="toast_video_resumed">Video has been resumed</string>
    <string name="cannot_upload_video_size">Cannot upload video -> bigger than 8 MiB</string>
    <string name="cannot_upload_picture_size">Cannot upload picture -> bigger than 8 MiB</string>
    <string name="new_post_added">New post was added</string>
    <string name="camera_open_fail">Unable to open camera</string>
    <string name="pause_image">Pause image</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm">Confirm</string>
    <string name="delete_post_dialog">Are you sure you want to remove this post?</string>
    <string name="yes">yes</string>
    <string name="post_delete_toast">Post has been permanently removed</string>
    <string name="delete_post_dialog_title">Delete post</string>
    <string name="post_delete_fail_toast">Deleting post failed, try again later</string>
    <string name="new_post_label">Add post</string>
    <string name="record_video">Record Video</string>
    <string name="network_error">Network not found</string>
</resources>